fix: Radio buttons checked state in high contrast mode

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -185,16 +185,15 @@
 
         &[type='checkbox'] {
             &:checked {
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
                 background-color: hsl(var(--primary));
 
                 &:after {
                     @include icon('\f00c');
-                    position: absolute;
                     color: hsl(var(--background));
                     font-size: 0.6rem;
-                    top: 50%;
-                    left: 50%;
-                    transform: translate(-50%, -50%);
                 }
             }
         }
@@ -203,15 +202,14 @@
             border-radius: 100%;
 
             &:checked {
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+
                 &:after {
-                    position: absolute;
-                    background: hsl(var(--primary));
-                    width: 100%;
-                    height: 100%;
-                    content: '';
-                    border-radius: 100%;
-                    transform: scale(0.6);
-                    transform-origin: center;
+                    @include icon('\f111');
+                    color: hsl(var(--primary));
+                    font-size: 0.5rem;
                 }
             }
         }
@@ -223,9 +221,10 @@
         background: linear-gradient(to right, hsl(var(--primary)) var(--slider-value), hsl(var(--muted)) var(--slider-value));
         height: 8px;
         border-radius: 4px;
-        outline: none;
 
         &::-webkit-slider-thumb {
+            position: relative;
+            z-index: 1;
             width: 1rem;
             height: 1rem;
             background-color: hsl(var(--background));
